welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:29: error: identifier expected but integer literal found.
  setCouleurBrosse(tableauCouleur[0]);
                                  ^Array1:32: error: ']' expected but '}' found.
}
^